Fix Scroll Padding and Scrollbar

--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -4,3 +4,7 @@
     color: white;
     height: 100%;
 }
+
+html{
+    scroll-padding-top: 70px;
+}
